fix(LoginForm, ForgotPassword): fix forgot password interface visibility

--- a/src/pages/loginPage/loginArea/forgotPassword/ForgotPassword.css
+++ b/src/pages/loginPage/loginArea/forgotPassword/ForgotPassword.css
@@ -1,7 +1,8 @@
 .forgot-password {
     margin-top: 10px;
-    color: white;
+    color: gray;
     text-align: end;
+    margin-right: 45px;
     font-size: 12px;
 }
 
