--- a/src/pages/loginPage/loginArea/loginContent/LoginContent.css
+++ b/src/pages/loginPage/loginArea/loginContent/LoginContent.css
@@ -1,5 +1,6 @@
 .login-content {
     width: 300px;
+    height: 300px;
     padding: 10px;
     border-radius: 10px;
     background-color: white;
