--- a/src/pages/loginPage/loginArea/loginForm/LoginForm.css
+++ b/src/pages/loginPage/loginArea/loginForm/LoginForm.css
@@ -2,7 +2,7 @@
     position: relative;
     margin-top: 40px;
     margin-left: 40px;
-    height: 230px;
+    height: 260px;
 }
 
 .login-button {
